# neuron

./: pyproject.toml
docs/: 000-vision.md  001-principles.md  002-core-concepts.md  003-neuron-manifesto.md
docs/adr/: 0001-framework-philosophy.md
docs/architecture/: package-architecture.md  runtime.md
examples/: hello.py
src/neuron/: __init__.py
src/neuron/app/: __init__.py  application.py
src/neuron/config/: __init__.py  settings.py
src/neuron/core/: __init__.py  state.py
src/neuron/dependency/: __init__.py  container.py  exceptions.py
src/neuron/events/: __init__.py  bus.py  event.py
src/neuron/lifecycle/: __init__.py  manager.py
src/neuron/plugins/: __init__.py  manager.py  plugin.py
src/neuron/runtime/: __init__.py  runtime.py
tests/: test_application.py  test_container.py  test_event_bus.py  test_lifecycle.py  test_plugins.py  test_runtime.py  test_settings.py
