[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "neuron-ai"
version = "0.1.0.dev0"
description = "AI-native application framework for Python"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Ashutosh Kumar" }
]

dependencies = []

keywords = [
    "ai",
    "agent",
    "framework",
    "llm",
    "python",
    "workflow"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]